# LeverX-HW2-JSON-Reader

./: .gitignore  README.md  main.py  pyproject.toml
data/: students.json
src/: cli.py  combiners.py  exporters.py  loaders.py  models.py
