[project]
name = "leverx-hw-2-json-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
# Match the project's Python requirement
target-version = "py313"
line-length = 100
extend-exclude = ["output/"]

[tool.ruff.lint]
# Baseline rules: errors, import sorting, bugbears, upgrades, simplifications, comprehensions, Ruff's own
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
# Keep config minimal; tweak as project grows
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
